fixed spacing

--- a/public/css/headcount.css
+++ b/public/css/headcount.css
@@ -14,7 +14,7 @@ nav a:hover{
 
 .container{
     display: grid;
-    grid-template-rows:1.5em 1fr 1fr 1fr 1fr ;
+    grid-template-rows:1fr 1fr 1fr 1fr 1fr 1fr ;
     grid-template-columns: 25% 50% 25%;
     grid-column-gap:5px;
     grid-template-areas: "nav nav nav"
